--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                         <li>Especializarme en BACK END dominando distintos lenguajes de programación, como Node.js,
                             Next.js, TypeScript, Laravel</li>
                         <li>Aprender de bases de datos No relacionales y pasarelas de pago</li>
-                        <li>Dominar algunos Micrservicios de los más utilizados.</li>
+                        <li>Dominar algunos microservicios de los más utilizados.</li>
                         <li>Lograr crear APIS y API REST con ayuda de NodeJS y otras tecnologías</li>
-                        <li>Lograr ser un experto progrmador FULL STACK dominando previamente todo lo anterior</li>
+                        <li>Lograr ser un experto programador FULL STACK dominando previamente todo lo anterior</li>
                     </ul>
                 </div>
             </div>
