--- a/index.html
+++ b/index.html
@@ -240,6 +240,16 @@
 
                 <div class="carousel__listaProyects">
                     <div class="carousel__elementoProjects ps-3 pe-3">
+                    <iframe width="200" height="150" src="https://www.youtube.com/embed/sl4t-FLKKNU" title="YouTube video player" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+                                                   picture-in-picture" allowfullscreen></iframe>
+                        <p>Compañía que ofrece fotos y cuadros creados mediante Inteligencia Artificial</p>
+                        <a class="btn btn-sm btn-danger"
+                            href="https://github.com/12398765/ArteInteligenciaArtificial.git" target="_blank">
+                            Ver en GitHub
+                        </a>
+                    </div>
+                    <div class="carousel__elementoProjects ps-3 pe-3">
                         <video width="200" height="150" controls>
                             <source src="proyectos/arte_inteligencia_artificial.mp4" type="video/mp4">
                         </video>
