--- a/index.html
+++ b/index.html
@@ -171,10 +171,6 @@
                         <p>Series y Películas de acción</p>
                     </div>
                     <div class="carousel__elemento">
-                        <img src="img/pasatiempos/noviazgo.jfif" alt="Noviazgo">
-                        <p>En una relación</p>
-                    </div>
-                    <div class="carousel__elemento">
                         <img src="img/pasatiempos/RDLN.jfif" alt="Relatos de la Noche">
                         <p>Sigo el canal RDLN</p>
                     </div>
@@ -248,24 +244,13 @@
                             href="https://github.com/12398765/ArteInteligenciaArtificial.git" target="_blank">
                             Ver en GitHub
                         </a>
-                    </div>
-                    <div class="carousel__elementoProjects ps-3 pe-3">
-                        <video width="200" height="150" controls>
-                            <source src="proyectos/arte_inteligencia_artificial.mp4" type="video/mp4">
-                        </video>
-                        <p>Compañía que ofrece fotos y cuadros creados mediante Inteligencia Artificial</p>
-                        <a class="btn btn-sm btn-danger"
-                            href="https://github.com/12398765/ArteInteligenciaArtificial.git" target="_blank">
-                            Ver en GitHub
-                        </a>
                         <p class="text-center mt-3"><b>Tecnologías empleadas</b></p>
                         <p>HTML5, CSS, Bootstrap, Js</p>
                     </div>
-
                     <div class="carousel__elementoProjects ps-3 pe-3">
-                        <video width="200" height="150" controls>
-                            <source src="proyectos/PotaxioStudios.mp4" type="video/mp4">
-                        </video>
+                        <iframe width="200" height="150" src="https://www.youtube.com/embed/xxepmpbSdsw" title="YouTube video player" 
+                                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+                                                       picture-in-picture" allowfullscreen></iframe>
                         <p>Empresa de Videojuegos que busca vender sus productos y contratar personal</p>
                         <a class="btn btn-sm btn-danger" href="https://github.com/12398765/PotaxioStudio.git"
                             target="_blank">
@@ -276,9 +261,9 @@
                     </div>
 
                     <div class="carousel__elementoProjects ps-3 pe-3">
-                        <video width="200" height="150" controls>
-                            <source src="proyectos/crud_fetch.mp4" type="video/mp4">
-                        </video>
+                        <iframe width="200" height="150" src="https://www.youtube.com/embed/pSFwQLLjF4E" title="YouTube video player" 
+                                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+                                                       picture-in-picture" allowfullscreen></iframe>
                         <p>Sistema CRUD con autenticación. Envía correos para verificar la cuenta y
                             recuperar la contraseña</p>
                         <a class="btn btn-sm btn-danger" href="https://github.com/12398765/CRUD.git" target="_blank">
@@ -289,9 +274,9 @@
                     </div>
 
                     <div class="carousel__elementoProjects ps-3 pe-3">
-                        <video width="200" height="150" controls>
-                            <source src="proyectos/Proyecto_Reloj.mp4" type="video/mp4">
-                        </video>
+                        <iframe width="200" height="150" src="https://www.youtube.com/embed/JZgu8UOs4CE" title="YouTube video player" 
+                                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+                                                       picture-in-picture" allowfullscreen></iframe>
                         <p>Reloj en tiempo real desarrollado en JAVA, usando hilos y empleando el método de paint</p>
                         <a class="btn btn-sm btn-danger" href="https://github.com/12398765/reloj_Hilos_java.git"
                             target="_blank">
@@ -302,9 +287,9 @@
                     </div>
 
                     <div class="carousel__elementoProjects ps-3 pe-3">
-                        <video width="200" height="150" controls>
-                            <source src="proyectos/calcu_basica_java.mp4" type="video/mp4">
-                        </video>
+                        <iframe width="200" height="150" src="https://www.youtube.com/embed/IDZU_TdMt_4" title="YouTube video player" 
+                                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+                                                       picture-in-picture" allowfullscreen></iframe>
                         <p>Calculadora con operaciones como suma, resta, multiplicación, división, potencia y
                             módulo, implementado en JAVA</p>
                         <a class="btn btn-sm btn-danger" href="https://github.com/12398765/calculadoraBasica_java.git"
@@ -316,9 +301,9 @@
                     </div>
 
                     <div class="carousel__elementoProjects ps-3 pe-3">
-                        <video width="200" height="150" controls>
-                            <source src="proyectos/CRUD_Laravel.mp4" type="video/mp4">
-                        </video>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/r9Obb1M5bEo" title="YouTube video player" 
+                                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+                                                       picture-in-picture" allowfullscreen></iframe>
                         <p>CRUD de tareas relacionadas a una categorías. CRUD de categorías que pueden contener a varias
                             tareas.</p>
                         <a class="btn btn-sm btn-danger" href="https://github.com/12398765/CRUD_laravel.git"
@@ -348,13 +333,13 @@
         <div class="contenidoContacto mt-5 p-3 text-center">
             <p>Envíame un mensaje a alguna de las siguientes ligas:</p>
             <a
-                href=" https://wa.me/523319087302?text=He%20visto%20tu%20website%20y%20estoy%20interesado%20en%20contratarte">
+                href=" https://wa.me/523319087302?text=He%20visto%20tu%20website%20y%20estoy%20interesado%20en%20contratarte" target="_blank">
                 <img src="img/contacto/whats.jpg" style="width:50px; height:50px;" alt="whatsApp">
             </a>
-            <a href="https://www.facebook.com/1tzco">
+            <a href="https://www.facebook.com/1tzco" target="_blank">
                 <img src="img/contacto/messenger.jpg" style="width:50px; height:50px;" alt="messenger">
             </a>
-            <a href="mailto:ix.obsid@gmail.com">
+            <a href="mailto:ix.obsid@gmail.com" target="_blank">
                 <img src="img/contacto/gmail.png" style="width:50px; height:50px;" alt="gmail">
             </a>
 
