--- a/index.html
+++ b/index.html
@@ -290,8 +290,7 @@
                         <iframe width="200" height="150" src="https://www.youtube.com/embed/IDZU_TdMt_4" title="YouTube video player" 
                                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
                                                        picture-in-picture" allowfullscreen></iframe>
-                        <p>Calculadora con operaciones como suma, resta, multiplicación, división, potencia y
-                            módulo, implementado en JAVA</p>
+                        <p>Calculadora con operaciones básicas implementado en JAVA</p>
                         <a class="btn btn-sm btn-danger" href="https://github.com/12398765/calculadoraBasica_java.git"
                             target="_blank">
                             Ver en GitHub
