--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <iframe width="200" height="150" src="https://www.youtube.com/embed/IDZU_TdMt_4" title="YouTube video player" 
                                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
                                                        picture-in-picture" allowfullscreen></iframe>
-                        <p>Calculadora con operaciones básicas implementado en JAVA</p>
+                        <p>Calculadora con operaciones básicas implementado en JAVA, usando interfaces y clases.</p>
                         <a class="btn btn-sm btn-danger" href="https://github.com/12398765/calculadoraBasica_java.git"
                             target="_blank">
                             Ver en GitHub
@@ -303,8 +303,7 @@
                         <iframe width="200" height="150" src="https://www.youtube.com/embed/r9Obb1M5bEo" title="YouTube video player" 
                                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
                                                        picture-in-picture" allowfullscreen></iframe>
-                        <p>CRUD de tareas relacionadas a una categorías. CRUD de categorías que pueden contener a varias
-                            tareas.</p>
+                        <p>CRUD de tareas relacionadas a una categorías. CRUD de categorías.</p>
                         <a class="btn btn-sm btn-danger" href="https://github.com/12398765/CRUD_laravel.git"
                             target="_blank">
                             Ver en GitHub
