--- a/index.html
+++ b/index.html
@@ -108,30 +108,17 @@
                                     <img src="img/tecnologias/imgPhp.jfif" alt="PHP" class="php">
                                     <p class="ms-1 mt-2">INTERMEDIO</p>
                                 </div>
-
-                                <div class="imgTecnologias">
-                                    <img src="img/tecnologias/cplusplus.png" alt="c++" class="cplus">
-                                    <p class="ms-1 mt-2">INTERMEDIO</p>
-                                </div>
-                                <div class="imgTecnologias">
-                                    <img src="img/tecnologias/java.png" alt="java" class="java">
-                                    <p class="ms-1 mt-2">INTERMEDIO</p>
-                                </div>
-                                <div class="imgTecnologias">
-                                    <img src="img/tecnologias/arduino.png" alt="arduino" class="ard">
-                                    <p class="ms-1 mt-2">INTERMEDIO</p>
-                                </div>
-                                <div class="imgTecnologias">
-                                    <img src="img/tecnologias/matlab.jfif" alt="matlab" class="matlab">
-                                    <p class="ms-1 mt-2">SUPER BÁSICO</p>
-                                </div>
                                 <div class="imgTecnologias">
                                     <img src="img/tecnologias/python.png" alt="python" class="py">
-                                    <p class="ms-1 mt-2">EN CURSO</p>
+                                    <p class="ms-1 mt-2 text-center">EN CURSO</p>
                                 </div>
                                 <div class="imgTecnologias">
                                     <img src="img/tecnologias/laravel.png" alt="Laravel" class="lar">
-                                    <p class="ms-1 mt-2">EN CURSO</p>
+                                    <p class="ms-1 mt-2 text-center">EN CURSO</p>
+                                </div>
+                                <div class="imgTecnologias">
+                                    <img src="img/tecnologias/imgReactjs.png" alt="React" class="react">
+                                    <p class="ms-1 mt-2 text-center">MUY BÁSICO</p>
                                 </div>
                             </div>
                         </div>
