--- a/index.html
+++ b/index.html
@@ -334,6 +334,51 @@
         </div>
 
     </div><br>
+    <div style="width: 100%; background-color: rgba(121, 103, 128, 0.753); padding: 10px 0;">
+        <div class="row" style="width: 95%; margin: auto;">
+            <div class="col-12 col-md-6">
+                <p class="text-center">Información de Contacto</p>
+                <div class="content_redes">
+                    <div class="content_redes_a">
+                        <a href=" https://wa.me/523319087302?text=He%20visto%20tu%20website%20y%20estoy%20interesado%20en%20contratarte"
+                            target="_blank">
+                            <img src="img/contacto/whats.jpg" class="red_social whats" alt="whatsApp"></a>
+                    </div>
+
+                    <div class="content_redes_a">
+                        <a href="https://www.facebook.com/1tzco" target="_blank">
+                            <img src="img/contacto/messenger.jpg" class="red_social mess" alt="messenger">
+                        </a>
+                    </div>
+
+                    <div class="content_redes_a">
+                        <a href="mailto:ix.obsid@gmail.com" target="_blank">
+                            <img src="img/contacto/gmail.png" class="red_social gmail" alt="gmail">
+                        </a>
+                    </div>
+
+                    <div class="content_redes_a">
+                        <a href="https://discordapp.com/channels/@me/1870/" target="_blank">
+                            <img src="img/contacto/discord.png" class="red_social discord" alt="Discord">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6">
+                <p class="text-center">Guadalajara Jalisco, México</p>
+                <p class="text-center">Tel: +523319087302</p>
+                <p class="text-center">Email: ix.obsid@gmail.com</p>
+            </div>
+        </div>
+        <p class="text-center">©Derechos Reservados</p>
+        <div style="width: 80%; margin: auto;" class="d-flex justify-content-center">
+            <a href="curriculum/Curriculum.pdf" download="curriculum/Curriculum.pdf"
+                class="btn btn-sm btn-danger">Descargar
+                Curriculum
+            </a>
+        </div>
+    </div>
 </body>
 <!--CARROUSEL CON Glider.js-->
 <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
